todo-app/manifests/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
