todo-app/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-app-statefulset
spec:
  serviceName: todo-app-clusterip
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app-container
          image: thespeaker33/todo-app
        - name: todo-app-db
          image: postgres:16-alpine
          ports:
            - name: database
              containerPort: 5432
          volumeMounts:
            - name: todo-app-volume
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: todo-app-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  labels:
    app: todo-app-db
spec:
  ports:
  - port: 5432
    name: database
  clusterIP: None
  selector:
    app: todo-app
